Gui, tolerance, requested features from reddit

--- a/NoAwkwardSilence/MainForm.resx
+++ b/NoAwkwardSilence/MainForm.resx
@@ -123,4 +123,208 @@
   <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="notifyIcon1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>201, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="notifyIcon1.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAAAAAAAEAIABfFgAAFgAAAIlQTkcNChoKAAAADUlIRFIAAAEAAAABAAgGAAAAXHKoZgAAFiZJ
+        REFUeJzt3UuMHEWCBuA/K+td1e1228YLBo9fuBPsMXhAzDDLSquVZsVYjBBzQqWV4Iy4rHY4cBrNiQOD
+        OCziPJZQiROIw3rQIrRaYIYZFsbGg3Ha+AFtbAMN/axnZmXmHirbNHa7u6sqIiMy8/8ky+LRkWF3x18R
+        kfEAiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIgoUobqCkStblk5ANsA7ASw
+        D8D+8Pc9AG4DsBlAGUBGVR0pUg0AcwCuALgA4ByAs+Hv0wBmarbtqqueXIkPgLplTQA4BOBhAI8D2K22
+        RhRDFwG8CuBNACdrtj2vuD7CJDIA6pa1E8CjAJ4BcIfi6lDyXALwPIA3arY9rboyo0hMANQtazOAx9D/
+        xkwqrg6lxyz6HzSv12x7TnVlBhX7AKhb1hSAZwE8oboulHpHATxXs+0zqiuyUbENgLpl3QPgJQAPqa4L
+        0XXeA/B0zbY/Vl2R9cQuAOqWtQ/AywB+obouROt4C8BTNds+p7oiNxObAKhb1hiA3wL4D9V1IRrQCwB+
+        V7PtJdUVuV4sAqBuWb8EcEx1PYhGdKRm239UXYmVtA6A8FP/ZQD/prouRIK8gv6wQIvegLYBULesewEc
+        V10PIkkO12z7hOpKaLnctW5ZT4CNn5LtePhzrpRWPYC6ZWUA/B7Av6uuC1FEXgTwm5pt+yoerk0A1C2r
+        AOA1AEdU14UoYscA/Lpm292oH6xFANQtqwLgXQCHVdeFSJHjAP6pZtvNKB+qPADCxv8hAEt1XYgUswHc
+        H2UIKJ0EDLv974KNnwjot4N3w3YRCWUBEE74vQZ2+4lWOgzgtbB9SKeyB/B7cMKPaDVH0G8f0imZAwjf
+        f/5BxbOJYuTJmm0flfmAyAOAK/yIBiJ1xWCkARCu7V+M8plECTAua+9A1HMAL0f8PKIkkNZuIusBcEsv
+        0UikbCWOJADY9ScSQvhQIKohwG8jeg5RkglvR9J7AOEZfp/Jfg5RStwp8ozBKHoAnPgjEkdoe5LaAwiP
+        7lZ+6glRwtwr6shx2T2AlySXT5RGwtqVtB5AeGOPLat8opSzRNxAJLMH8KzEsonSTkj7ktIDCC/qnJVR
+        NhFdMznqhaSyegCPSSqXiL43cjuTFQDPSyqXiL43cjsTHgB1y9oJYFJ0uUR0g8mwvQ0tK6omKzwqoUwS
+        xPV9zPV6WPA8tDwPbd9H2/fR8n04vg8fgBcE/V/oTxKZALKGgYppopzJYCKbxZZcDttyORQyWt4tkyaP
+        AvjPYb9YRgA8I6FMGtJ8r4cr3S6+cV3M9Xpoeh6CAb4+AOADcIMAbb9/d8V0t398vWEYuCWXw65CAbuL
+        ReQYBio8gxECQOhbgLplTQAYaVaSRve14+Bip4PLjoOW50XyzJxhYKpcxsFymUEQvc01254f5gtF9wAO
+        CS6PBjDnuvig0cA3jhP5s90gwCfNJs6323hgbAw7i8XI65BihwC8M8wXio7qhwWXRxv0SbOJ/5qbU9L4
+        V2r7Pv53YQEfLC3BDwYZbNAIhm53ogPgccHl0QbN9noINGpwZ1otvLOwAE+jOiXY0O1OWADULSsHYLeo
+        8mgwP6lWYRrKb3r7gUvdLt5ZWGBPQL7dYfsbmMgewDaBZdGAqqaJu8pl1dW4wZfdLj5qNFRXIw2Gan8i
+        A2CkBQk0uh9XKihpOANvt1q42OmorkbSDdX+RP607BNYFg0haxg4XK2qrsaq/rq4iEZEryRTaqj2JzIA
+        9gssi4a0p1jEZG6o4aBUbhDgL4s8GFqiodofewAJYxgG7te0F3DVcfAFhwKyKO8B7BFYFo1gez6PH2m6
+        EOejRoOvBuUYqv2JDIDbBJZFI9LxtSAAND0Pn7XbqquRREO1P5EBsFlgWTQiXV8LAv1Vi+wFCDdU+xMZ
+        AHr+tKXYXk2HAW3fxwXOBYg2VPsTGQD6vYBOuVOtluoq3NRpjesWU0O1PzbahJp1XZzXeKy90Ovha8Ub
+        l4gBkFgfNhoDHfyhAicD1WMAJNB0pxOLT9dL3S56nAxUigGQMH4QxGbzTS8Irh0vRmowABLmdKsVqzX3
+        03wboBQDIEE6vo+/N5uqqzGQq47DYYBCDIAE+bjRgBuzxtQLAnwVg/mKpGIAJMR8r4fPYtqdvsIAUIYB
+        kBAfNRpanQk4iMucCFSGAZAAl7tdXIlxI2p4XqwmLpOEARBzcXrtt5Y4rFtIIgZAzJ1tt7HQ66muxsi+
+        dl3VVUglBkCMOb6PkzF77Xcz7AGowQCIsZPNJrrhhZ1x1/A8tDkPEDkGQEwt9no4k7DNNDMcBkSOARBT
+        f2s0EnfjDgMgegyAGPracXApxq/9bua7BExmxg0DIGaCIMCHS0uqqyHFrOvGdjFTXDEAYuZCp4PZhH5S
+        ukGAJU4ERooBECO9IMDxBCz6WUtSw01XDIAYOdVsop2Q1343wwCIFgMgJpqeh09TcJLuHAMgUgyAmDjR
+        aKTi4Iw5vgqMFAMgBr5zXVyUtNdft5uE276PTsKHOTphAMSArCO+J7NZPKDhTcJJ2NwUFwwAzU13OvhG
+        0kaZA5UKJnM5GJpdIjrPAIgMA0BjMvf6V00TOwsFmIaBzaYp5RnDYgBEhwGgMZlHfN9dLiMTfvJv0Wwe
+        YIGLgSLDANBUx/fxiaTXfsVMBntLpWv/rFsALLIHEBkGgKZONptwJM2GW+UysivG/VuzWSnPGVbb96X9
+        2emHGAAaWuj1cFbSXv+cYWBqxac/AGzKZn8QCDrgMCAaDAANyTzie1+phHzmh9/2jGFgUrNeAIcB0WAA
+        aOaq40g7Jz9jGLirXF71v+m2IIg9gGgwADQSBAE+krjXf3exiMpNXvlt1SwA+CowGgwAjZzrdKRthjEA
+        HLjJpz8AbNFsCMDVgNFgAGjC9X18LHGv/45CAZvWaORjpnnD3IBKTc9LxeYn1fT5jqfcqVZL6l7/g2t8
+        +gOAYRha9QICcBgQBQaABlqeh9MS9/rfksthWz6/7v+n24IgBoB8DAANnGg2pXZ3D1QqG/r/dOoBADwc
+        JAoMAMXmXBcXJF7wMZHNYscGPv0B/XoADAD5GACK/a3ZlLLXf9mBcnnD230rpomSRhOBDAD59Plup9BV
+        x8EViRd8VEwTu4rFgb5Gp16A4/s8JlwyBoAiQRDgb5KP+L5rxZbfjdIpAID+cWgkDwNAkc+7XcxK/OEu
+        ZDK487pNPxuh20TgtwwAqRgACvhBgBOSP/2nSqWhdvjp1gP4hgEgFQNAgbPttrSTfgAgaxiYWmfhz80U
+        MxlUNToibNZ1eTaARAyAiLm+j783m1KfsbdUQnGE2XydegEBgK8kHYpKDIDInWq1pJ57bxgG7h7y03+Z
+        bicEXWUASMMAiFBb8pJfANhVKIzchdepBwAAX3EeQBoGQIQ+lrzkF1h7y+9GTWaz0OmAsMVeT+qcSZox
+        ACKy2OvhnKTrvZbdVihgs4BP71wms+bWYRU4DyAHAyAixyWe87dsvS2/g9BtGMB5ADkYABGYcV1MS1zy
+        C/SP9Nq+wU0/G6HbgqCvHEd6gKYRAyACxyUv+gHEjP1X0q0H0PF9bg6SgAEg2ZfdLr6W3H0dz2ZxR6Eg
+        tMzJbHbgfQSycRggHgNAoiAIIvv0F33Db8YwsFmzYcAVBoBwDACJLnQ60o+1KmUy2DPglt+N0m0eYMZ1
+        eVCoYAwASbwgwAnJS36B4bb8bpRu8wBeEPB1oGAMAEnsVgstyYtXcoYx1JbfjdItAAAOA0RjAEjgSLza
+        e6WpclnqWf6bTFO7S0NlXZuWVnoN8jS32OthttfDoueh4Xlo+z464VXWXhCgFwTw0d/vH8VI9ZNmE59E
+        MMzQScPzMOe6QlY8EgNgXW3Pw9l2G+c7HTS5Hl0L090uA0AQBsBN+EEAu93GyUYDLmeetfJFt4t7qlXV
+        1UgEBsAqOr6PdxYWpC/goeEs9HqY6/W0W6cQR5wEvM58r4djs7Ns/Jr7XPLOyrRgAKww57r477k5jvVj
+        gAEgBgMgNOe6eGt+Hl0eQBkLDc/DDHtpI2MAoP967202/ti5wF7AyFIfAG3Pw9vz82iz8cfOF90ufL6h
+        GUmqA6AXBPifhQWeNxdTXd/Hl1wZOJJUB8CfFxd591zMcRgwmtQGwKlmE1/whyf2LjsO2uzBDS2VAfCt
+        6+J4ytbQJ5UfBPiMQT601AWAFwT40+IiD5hMkM/abU4GDil1AXCq1cIiD5dMlJbncTJwSKkKgK7v4xS7
+        /onEYcBwUhUA59ptnimXUFe7Xb7OHUKqAkD25RykToD+XAANJlUBIPuEXlLrPCcDB5aqADA1O9+OxGpz
+        ZeDAUhUA23iMVOKd5TBgIKkKgIOVivAbdEgvXzkOljgZuGGpCoBtuRx+NjbGEBiBYRi4o1DAwUpFdVVW
+        FQA4G8GR7EmRukPV9pVKGDNN/HVpCQucFNywiWwWe4pF7CkWUTJNOOGaCh2n3M53Ori3WuWczwakLgAA
+        YHs+j0cmJzHd7eJMu40Zx9HyB1m18WwWOwsF7CoUbjiGO5/JYHM2i1kNQ7Tr+/ii25V2Z2KSpDIAgP7t
+        t7uKRewqFvtLSR0H3zgOZlw3tQtK8pkMtuVyuDWfx458HuPrnLp7Sz6vZQAAwJlWiwGwAakNgJXKpon9
+        pRL2l0q46jh4e24u8h5BIZPBr7duhYH+hqXlG4au/91b8c9eEFz7d14QfP8L/cNOHN+HG95Y1AtvK1r+
+        lTUMFAwDFdPEpmwWk9ksNpnmQPMj23M52KL/IgT51nUx47p887MOBsAKju/jz4uLSoYDU6XStXv44jJ2
+        vSWfhwFoO3w63Wph26ZNqquhtVS9BVjPX5aWpN/ou5qsYcAqlyN/7qiK4TyArqa5P2BdDIDQuXZb2QlB
+        +0slFCTe8ivTTo3H2UEQ4DRfCa4pnj91gs31evhgaUnJs03DwF0x/PRftkvjAAD6wd7hic83lfoAcMN7
+        AD1Fm0juLJVQNk0lzxZhzDSxVeOJtl4Q4Ax7ATeV+gB4f2lJ2QlBpmHgQIw//Zft1rwXYLfbcNkLWFWq
+        A8ButZSeDLw/5p/+y3YVi1ovr3Z8H2e4SWhVqQ2Ab10XHzUayp6fMwxt19MPqpjJ4PZ8XnU11nS61eJp
+        UKtIZQA44bhf5eERByoVFGM687+avaWS6iqsqeP73CS0iuT8BG5QEB4LrvIK8LJpxnrmfzU78nmUNA+0
+        T9kLuIHe3zEJTrfbyk+N+Um1em3VX1JkDAN3at4LaPs+Dwy5TqoC4DvXxXGF436gvxNR91nzYd1ZKmk9
+        GQgAnzab7AWskJoAcH0f7y0uKh33ZwwDD4yNKXu+bGXTxM5CQXU11tT2fa4LWCE1AfBho6H8RqCD5TIm
+        NF47L0Ic5jZOtVpcFxBKRQB82e3inOKx30Q2ix8n5LXfWrblctiu+SvBru/D5lwAgBQEQMf38f7iotI6
+        mIaBhzZtQkbz8bEocVjd+GmrBYe9gOQHwIdLS8o3g9xXrWq9bVa0HYWC9gdxOL6PU5wLSHYAfNnt4qLi
+        SyP3FIuYisEnomj3VKuqq7CuOU2PM4tSYj+WekGA/1O0xXfZrfk8HhwfV1oHVW7N57GjUMBlDW/qyRoG
+        DlermNJ83UIUEtsDONVsKj0NZmsuh3+emEjNuH81D4yNIafZn/+WfB6PbNkCq1zWfs1CFBIZAB3fV3oS
+        zLZcDv8yMZG41X6DqpomfqZJDyifyeCnY2P414kJjCVgB6YoiRwCnG234Spa8LOrWMTPx8djc7CnbLuK
+        RXzrukoDeXexiPuqVZTY8G+QyABQMfGXMQwcqlRwkF3LG9xXraLt+/g84u/LZDaL+8bG8A+ar0tQKZEB
+        EPVOvy25HB4cG7vh9hzqMwwD/xj2is5HsACnbJq4p1LBXs0PKtGByABoANDi3c+4aUbyiqdqmjhQLmNf
+        qZTqyb6NyBgGfj4+jqpp4mSziUDCEK2UyeDuSgX7V9yxkCJD7XITGQBz0CQA7i6X8SdJq/8M9Gf4p8pl
+        /KhQYMMf0KFKBbfl83h/cRHzgkJ6IpvFVKmEvaVSmude5ob5IpEBcAXAHQLLG9qeUglOEOBEoyFkMrCY
+        yWBLLofb83ncXigk4hw/lbbmcnhkchKXul2cbrUw47oD3y5UymRwe6GAvaWS9qsOI3JlmC8SGQAXAPxU
+        YHkjscpl7C0WcclxMOM4WPA8ND0PXd+/ds+eYRgw0V8YkjEMFDIZlMNfFdPEuGliMpdDlQ1eOMMwsLNY
+        xM5iEW3Pw2XHwXeuiwXPQ8Pzrt1paADIGwaKmQwmwjsMt+fzmMxmOb7/oQvDfJHIADgnsCwhcpnMtTvt
+        SV8l08S+Ugn7uDJvFEO1P5ELgc4KLIuIBjNU+xMZANr1AIhSRHkPYFpgWUQ0mKHan8gAmBFYFhENZqj2
+        JywAarbtArgoqjwi2rCLYfsbmOjdgK8KLo+I1jd0uxMdAG8KLo+I1jd0uxMdACcFl0dE6xu63QkNgJpt
+        zwO4JLJMIlrTpbDdDUXGiUDPSyiTiFY3UnuTEQBvSCiTiFY3UnuTspuiblnfAZiUUTYRXTNbs+0toxQg
+        61DQZySVS0TfG7mdyQqA1yWVS0TfG7mdSQmAmm3PATgqo2wiAgAcDdvZSGTeC/CcxLKJ0k5I+5IWADXb
+        PgPgPVnlE6XYe2H7Gpnsm4Gellw+URoJa1dSA6Bm2x8DeEvmM4hS5q2wXQkRxd2AT0XwDKK0ENqepAdA
+        zbbPAXhB9nOIUuCFsD0JE9XtwL+L6DlESSa8HUUSADXbXgJwJIpnESXUkbAdCRVVDwA12/4jgFeieh5R
+        grwSth/hIguAECcEiQYnrd1EGgBhF+ZwlM8kirnDMrr+y6LuAaBm2ycAPBn1c4li6MmwvUgTeQAAQM22
+        jwJ4UcWziWLixbCdSKUkAEK/AXBM4fOJdHUM/fYhndL7leuWVQDwPjgvQLTsOIAHa7bdjeJhyi9Yr1tW
+        BcCHACzVdSFSzAZwf822m1E9UOUQAAAQ/mHvRz/5iNLqOCJu/IAGAQBcC4EHwTkBSqdj6Hf7I238gCYB
+        AADhmOdX4NsBSpcXAfwqqjH/9ZTPAaymbllPAPiD6noQSfZkFK/61qJlAABA3bLuBecFKLkOy17ksxHa
+        DAGuF/7ljIMbiChZXgEwrkPjBzTuAaxUt6xfghOEFH9HZO3qG5a2PYCVwr+0cfBkIYqnF9D/1Neq8QMx
+        6QGsVLesfQBeBvAL1XUhWsdbAJ4SfYyXSLELgGV1y7oHwEsAHlJdF6LrvAfgaZGn98oS2wBYVresKQDP
+        AnhCdV0o9Y4CeE7UpR1RiH0ALKtb1mYAjwF4HryanKIzi/4tva+LuKsvaokJgJXqlrUTwKPof2PuUFwd
+        Sp5L6H/QvFGz7WnVlRlFIgNgpbplTQA4BOBhAI8D2K22RhRDFwG8CuBNACdrtj2vuD7CJD4Arle3rByA
+        bQB2AtgHYH/4+x4AtwHYDKCMmLwipZE1AMwBuALgAoBzAM6Gv08DmKnZtquuekRERERERERERERERERE
+        RERERERERERERERERERERERERERERERERJRE/w+iQpWHWpzyPgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAAAAAAAEAIABfFgAAFgAAAIlQTkcNChoKAAAADUlIRFIAAAEAAAABAAgGAAAAXHKoZgAAFiZJ
+        REFUeJzt3UuMHEWCBuA/K+td1e1228YLBo9fuBPsMXhAzDDLSquVZsVYjBBzQqWV4Iy4rHY4cBrNiQOD
+        OCziPJZQiROIw3rQIrRaYIYZFsbGg3Ha+AFtbAMN/axnZmXmHirbNHa7u6sqIiMy8/8ky+LRkWF3x18R
+        kfEAiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIgoUobqCkStblk5ANsA7ASw
+        D8D+8Pc9AG4DsBlAGUBGVR0pUg0AcwCuALgA4ByAs+Hv0wBmarbtqqueXIkPgLplTQA4BOBhAI8D2K22
+        RhRDFwG8CuBNACdrtj2vuD7CJDIA6pa1E8CjAJ4BcIfi6lDyXALwPIA3arY9rboyo0hMANQtazOAx9D/
+        xkwqrg6lxyz6HzSv12x7TnVlBhX7AKhb1hSAZwE8oboulHpHATxXs+0zqiuyUbENgLpl3QPgJQAPqa4L
+        0XXeA/B0zbY/Vl2R9cQuAOqWtQ/AywB+obouROt4C8BTNds+p7oiNxObAKhb1hiA3wL4D9V1IRrQCwB+
+        V7PtJdUVuV4sAqBuWb8EcEx1PYhGdKRm239UXYmVtA6A8FP/ZQD/prouRIK8gv6wQIvegLYBULesewEc
+        V10PIkkO12z7hOpKaLnctW5ZT4CNn5LtePhzrpRWPYC6ZWUA/B7Av6uuC1FEXgTwm5pt+yoerk0A1C2r
+        AOA1AEdU14UoYscA/Lpm292oH6xFANQtqwLgXQCHVdeFSJHjAP6pZtvNKB+qPADCxv8hAEt1XYgUswHc
+        H2UIKJ0EDLv974KNnwjot4N3w3YRCWUBEE74vQZ2+4lWOgzgtbB9SKeyB/B7cMKPaDVH0G8f0imZAwjf
+        f/5BxbOJYuTJmm0flfmAyAOAK/yIBiJ1xWCkARCu7V+M8plECTAua+9A1HMAL0f8PKIkkNZuIusBcEsv
+        0UikbCWOJADY9ScSQvhQIKohwG8jeg5RkglvR9J7AOEZfp/Jfg5RStwp8ozBKHoAnPgjEkdoe5LaAwiP
+        7lZ+6glRwtwr6shx2T2AlySXT5RGwtqVtB5AeGOPLat8opSzRNxAJLMH8KzEsonSTkj7ktIDCC/qnJVR
+        NhFdMznqhaSyegCPSSqXiL43cjuTFQDPSyqXiL43cjsTHgB1y9oJYFJ0uUR0g8mwvQ0tK6omKzwqoUwS
+        xPV9zPV6WPA8tDwPbd9H2/fR8n04vg8fgBcE/V/oTxKZALKGgYppopzJYCKbxZZcDttyORQyWt4tkyaP
+        AvjPYb9YRgA8I6FMGtJ8r4cr3S6+cV3M9Xpoeh6CAb4+AOADcIMAbb9/d8V0t398vWEYuCWXw65CAbuL
+        ReQYBio8gxECQOhbgLplTQAYaVaSRve14+Bip4PLjoOW50XyzJxhYKpcxsFymUEQvc01254f5gtF9wAO
+        CS6PBjDnuvig0cA3jhP5s90gwCfNJs6323hgbAw7i8XI65BihwC8M8wXio7qhwWXRxv0SbOJ/5qbU9L4
+        V2r7Pv53YQEfLC3BDwYZbNAIhm53ogPgccHl0QbN9noINGpwZ1otvLOwAE+jOiXY0O1OWADULSsHYLeo
+        8mgwP6lWYRrKb3r7gUvdLt5ZWGBPQL7dYfsbmMgewDaBZdGAqqaJu8pl1dW4wZfdLj5qNFRXIw2Gan8i
+        A2CkBQk0uh9XKihpOANvt1q42OmorkbSDdX+RP607BNYFg0haxg4XK2qrsaq/rq4iEZEryRTaqj2JzIA
+        9gssi4a0p1jEZG6o4aBUbhDgL4s8GFqiodofewAJYxgG7te0F3DVcfAFhwKyKO8B7BFYFo1gez6PH2m6
+        EOejRoOvBuUYqv2JDIDbBJZFI9LxtSAAND0Pn7XbqquRREO1P5EBsFlgWTQiXV8LAv1Vi+wFCDdU+xMZ
+        AHr+tKXYXk2HAW3fxwXOBYg2VPsTGQD6vYBOuVOtluoq3NRpjesWU0O1PzbahJp1XZzXeKy90Ovha8Ub
+        l4gBkFgfNhoDHfyhAicD1WMAJNB0pxOLT9dL3S56nAxUigGQMH4QxGbzTS8Irh0vRmowABLmdKsVqzX3
+        03wboBQDIEE6vo+/N5uqqzGQq47DYYBCDIAE+bjRgBuzxtQLAnwVg/mKpGIAJMR8r4fPYtqdvsIAUIYB
+        kBAfNRpanQk4iMucCFSGAZAAl7tdXIlxI2p4XqwmLpOEARBzcXrtt5Y4rFtIIgZAzJ1tt7HQ66muxsi+
+        dl3VVUglBkCMOb6PkzF77Xcz7AGowQCIsZPNJrrhhZ1x1/A8tDkPEDkGQEwt9no4k7DNNDMcBkSOARBT
+        f2s0EnfjDgMgegyAGPracXApxq/9bua7BExmxg0DIGaCIMCHS0uqqyHFrOvGdjFTXDEAYuZCp4PZhH5S
+        ukGAJU4ERooBECO9IMDxBCz6WUtSw01XDIAYOdVsop2Q1343wwCIFgMgJpqeh09TcJLuHAMgUgyAmDjR
+        aKTi4Iw5vgqMFAMgBr5zXVyUtNdft5uE276PTsKHOTphAMSArCO+J7NZPKDhTcJJ2NwUFwwAzU13OvhG
+        0kaZA5UKJnM5GJpdIjrPAIgMA0BjMvf6V00TOwsFmIaBzaYp5RnDYgBEhwGgMZlHfN9dLiMTfvJv0Wwe
+        YIGLgSLDANBUx/fxiaTXfsVMBntLpWv/rFsALLIHEBkGgKZONptwJM2GW+UysivG/VuzWSnPGVbb96X9
+        2emHGAAaWuj1cFbSXv+cYWBqxac/AGzKZn8QCDrgMCAaDAANyTzie1+phHzmh9/2jGFgUrNeAIcB0WAA
+        aOaq40g7Jz9jGLirXF71v+m2IIg9gGgwADQSBAE+krjXf3exiMpNXvlt1SwA+CowGgwAjZzrdKRthjEA
+        HLjJpz8AbNFsCMDVgNFgAGjC9X18LHGv/45CAZvWaORjpnnD3IBKTc9LxeYn1fT5jqfcqVZL6l7/g2t8
+        +gOAYRha9QICcBgQBQaABlqeh9MS9/rfksthWz6/7v+n24IgBoB8DAANnGg2pXZ3D1QqG/r/dOoBADwc
+        JAoMAMXmXBcXJF7wMZHNYscGPv0B/XoADAD5GACK/a3ZlLLXf9mBcnnD230rpomSRhOBDAD59Plup9BV
+        x8EViRd8VEwTu4rFgb5Gp16A4/s8JlwyBoAiQRDgb5KP+L5rxZbfjdIpAID+cWgkDwNAkc+7XcxK/OEu
+        ZDK487pNPxuh20TgtwwAqRgACvhBgBOSP/2nSqWhdvjp1gP4hgEgFQNAgbPttrSTfgAgaxiYWmfhz80U
+        MxlUNToibNZ1eTaARAyAiLm+j783m1KfsbdUQnGE2XydegEBgK8kHYpKDIDInWq1pJ57bxgG7h7y03+Z
+        bicEXWUASMMAiFBb8pJfANhVKIzchdepBwAAX3EeQBoGQIQ+lrzkF1h7y+9GTWaz0OmAsMVeT+qcSZox
+        ACKy2OvhnKTrvZbdVihgs4BP71wms+bWYRU4DyAHAyAixyWe87dsvS2/g9BtGMB5ADkYABGYcV1MS1zy
+        C/SP9Nq+wU0/G6HbgqCvHEd6gKYRAyACxyUv+gHEjP1X0q0H0PF9bg6SgAEg2ZfdLr6W3H0dz2ZxR6Eg
+        tMzJbHbgfQSycRggHgNAoiAIIvv0F33Db8YwsFmzYcAVBoBwDACJLnQ60o+1KmUy2DPglt+N0m0eYMZ1
+        eVCoYAwASbwgwAnJS36B4bb8bpRu8wBeEPB1oGAMAEnsVgstyYtXcoYx1JbfjdItAAAOA0RjAEjgSLza
+        e6WpclnqWf6bTFO7S0NlXZuWVnoN8jS32OthttfDoueh4Xlo+z464VXWXhCgFwTw0d/vH8VI9ZNmE59E
+        MMzQScPzMOe6QlY8EgNgXW3Pw9l2G+c7HTS5Hl0L090uA0AQBsBN+EEAu93GyUYDLmeetfJFt4t7qlXV
+        1UgEBsAqOr6PdxYWpC/goeEs9HqY6/W0W6cQR5wEvM58r4djs7Ns/Jr7XPLOyrRgAKww57r477k5jvVj
+        gAEgBgMgNOe6eGt+Hl0eQBkLDc/DDHtpI2MAoP967202/ti5wF7AyFIfAG3Pw9vz82iz8cfOF90ufL6h
+        GUmqA6AXBPifhQWeNxdTXd/Hl1wZOJJUB8CfFxd591zMcRgwmtQGwKlmE1/whyf2LjsO2uzBDS2VAfCt
+        6+J4ytbQJ5UfBPiMQT601AWAFwT40+IiD5hMkM/abU4GDil1AXCq1cIiD5dMlJbncTJwSKkKgK7v4xS7
+        /onEYcBwUhUA59ptnimXUFe7Xb7OHUKqAkD25RykToD+XAANJlUBIPuEXlLrPCcDB5aqADA1O9+OxGpz
+        ZeDAUhUA23iMVOKd5TBgIKkKgIOVivAbdEgvXzkOljgZuGGpCoBtuRx+NjbGEBiBYRi4o1DAwUpFdVVW
+        FQA4G8GR7EmRukPV9pVKGDNN/HVpCQucFNywiWwWe4pF7CkWUTJNOOGaCh2n3M53Ori3WuWczwakLgAA
+        YHs+j0cmJzHd7eJMu40Zx9HyB1m18WwWOwsF7CoUbjiGO5/JYHM2i1kNQ7Tr+/ii25V2Z2KSpDIAgP7t
+        t7uKRewqFvtLSR0H3zgOZlw3tQtK8pkMtuVyuDWfx458HuPrnLp7Sz6vZQAAwJlWiwGwAakNgJXKpon9
+        pRL2l0q46jh4e24u8h5BIZPBr7duhYH+hqXlG4au/91b8c9eEFz7d14QfP8L/cNOHN+HG95Y1AtvK1r+
+        lTUMFAwDFdPEpmwWk9ksNpnmQPMj23M52KL/IgT51nUx47p887MOBsAKju/jz4uLSoYDU6XStXv44jJ2
+        vSWfhwFoO3w63Wph26ZNqquhtVS9BVjPX5aWpN/ou5qsYcAqlyN/7qiK4TyArqa5P2BdDIDQuXZb2QlB
+        +0slFCTe8ivTTo3H2UEQ4DRfCa4pnj91gs31evhgaUnJs03DwF0x/PRftkvjAAD6wd7hic83lfoAcMN7
+        AD1Fm0juLJVQNk0lzxZhzDSxVeOJtl4Q4Ax7ATeV+gB4f2lJ2QlBpmHgQIw//Zft1rwXYLfbcNkLWFWq
+        A8ButZSeDLw/5p/+y3YVi1ovr3Z8H2e4SWhVqQ2Ab10XHzUayp6fMwxt19MPqpjJ4PZ8XnU11nS61eJp
+        UKtIZQA44bhf5eERByoVFGM687+avaWS6iqsqeP73CS0iuT8BG5QEB4LrvIK8LJpxnrmfzU78nmUNA+0
+        T9kLuIHe3zEJTrfbyk+N+Um1em3VX1JkDAN3at4LaPs+Dwy5TqoC4DvXxXGF436gvxNR91nzYd1ZKmk9
+        GQgAnzab7AWskJoAcH0f7y0uKh33ZwwDD4yNKXu+bGXTxM5CQXU11tT2fa4LWCE1AfBho6H8RqCD5TIm
+        NF47L0Ic5jZOtVpcFxBKRQB82e3inOKx30Q2ix8n5LXfWrblctiu+SvBru/D5lwAgBQEQMf38f7iotI6
+        mIaBhzZtQkbz8bEocVjd+GmrBYe9gOQHwIdLS8o3g9xXrWq9bVa0HYWC9gdxOL6PU5wLSHYAfNnt4qLi
+        SyP3FIuYisEnomj3VKuqq7CuOU2PM4tSYj+WekGA/1O0xXfZrfk8HhwfV1oHVW7N57GjUMBlDW/qyRoG
+        DlermNJ83UIUEtsDONVsKj0NZmsuh3+emEjNuH81D4yNIafZn/+WfB6PbNkCq1zWfs1CFBIZAB3fV3oS
+        zLZcDv8yMZG41X6DqpomfqZJDyifyeCnY2P414kJjCVgB6YoiRwCnG234Spa8LOrWMTPx8djc7CnbLuK
+        RXzrukoDeXexiPuqVZTY8G+QyABQMfGXMQwcqlRwkF3LG9xXraLt+/g84u/LZDaL+8bG8A+ar0tQKZEB
+        EPVOvy25HB4cG7vh9hzqMwwD/xj2is5HsACnbJq4p1LBXs0PKtGByABoANDi3c+4aUbyiqdqmjhQLmNf
+        qZTqyb6NyBgGfj4+jqpp4mSziUDCEK2UyeDuSgX7V9yxkCJD7XITGQBz0CQA7i6X8SdJq/8M9Gf4p8pl
+        /KhQYMMf0KFKBbfl83h/cRHzgkJ6IpvFVKmEvaVSmude5ob5IpEBcAXAHQLLG9qeUglOEOBEoyFkMrCY
+        yWBLLofb83ncXigk4hw/lbbmcnhkchKXul2cbrUw47oD3y5UymRwe6GAvaWS9qsOI3JlmC8SGQAXAPxU
+        YHkjscpl7C0WcclxMOM4WPA8ND0PXd+/ds+eYRgw0V8YkjEMFDIZlMNfFdPEuGliMpdDlQ1eOMMwsLNY
+        xM5iEW3Pw2XHwXeuiwXPQ8Pzrt1paADIGwaKmQwmwjsMt+fzmMxmOb7/oQvDfJHIADgnsCwhcpnMtTvt
+        SV8l08S+Ugn7uDJvFEO1P5ELgc4KLIuIBjNU+xMZANr1AIhSRHkPYFpgWUQ0mKHan8gAmBFYFhENZqj2
+        JywAarbtArgoqjwi2rCLYfsbmOjdgK8KLo+I1jd0uxMdAG8KLo+I1jd0uxMdACcFl0dE6xu63QkNgJpt
+        zwO4JLJMIlrTpbDdDUXGiUDPSyiTiFY3UnuTEQBvSCiTiFY3UnuTspuiblnfAZiUUTYRXTNbs+0toxQg
+        61DQZySVS0TfG7mdyQqA1yWVS0TfG7mdSQmAmm3PATgqo2wiAgAcDdvZSGTeC/CcxLKJ0k5I+5IWADXb
+        PgPgPVnlE6XYe2H7Gpnsm4Gellw+URoJa1dSA6Bm2x8DeEvmM4hS5q2wXQkRxd2AT0XwDKK0ENqepAdA
+        zbbPAXhB9nOIUuCFsD0JE9XtwL+L6DlESSa8HUUSADXbXgJwJIpnESXUkbAdCRVVDwA12/4jgFeieh5R
+        grwSth/hIguAECcEiQYnrd1EGgBhF+ZwlM8kirnDMrr+y6LuAaBm2ycAPBn1c4li6MmwvUgTeQAAQM22
+        jwJ4UcWziWLixbCdSKUkAEK/AXBM4fOJdHUM/fYhndL7leuWVQDwPjgvQLTsOIAHa7bdjeJhyi9Yr1tW
+        BcCHACzVdSFSzAZwf822m1E9UOUQAAAQ/mHvRz/5iNLqOCJu/IAGAQBcC4EHwTkBSqdj6Hf7I238gCYB
+        AADhmOdX4NsBSpcXAfwqqjH/9ZTPAaymbllPAPiD6noQSfZkFK/61qJlAABA3bLuBecFKLkOy17ksxHa
+        DAGuF/7ljIMbiChZXgEwrkPjBzTuAaxUt6xfghOEFH9HZO3qG5a2PYCVwr+0cfBkIYqnF9D/1Neq8QMx
+        6QGsVLesfQBeBvAL1XUhWsdbAJ4SfYyXSLELgGV1y7oHwEsAHlJdF6LrvAfgaZGn98oS2wBYVresKQDP
+        AnhCdV0o9Y4CeE7UpR1RiH0ALKtb1mYAjwF4HryanKIzi/4tva+LuKsvaokJgJXqlrUTwKPof2PuUFwd
+        Sp5L6H/QvFGz7WnVlRlFIgNgpbplTQA4BOBhAI8D2K22RhRDFwG8CuBNACdrtj2vuD7CJD4Arle3rByA
+        bQB2AtgHYH/4+x4AtwHYDKCMmLwipZE1AMwBuALgAoBzAM6Gv08DmKnZtquuekRERERERERERERERERE
+        RERERERERERERERERERERERERERERERERJRE/w+iQpWHWpzyPgAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
